# shape-browser4djvu

./: Doxyfile  Makefile.am  pp.sh  revealshapes.cpp
docs/: djvudict-db.md  schema-djvudict.md  schema-shape-browser.md  shape-browser-basic-shape-id.md
docs/diagrams/: process_document_cfg.dot
libdjvu/: GBitmap.h
samples/: Opusculum_scanOCR.djvu
shape_browser/: create_aux.sql  djview_launcher.py  gui.py  main.py  model.py  page_info_provider.py
tools/: Makefile.in
